--- a/.github/workflows/hub.yml
+++ b/.github/workflows/hub.yml
@@ -45,7 +45,8 @@ jobs:
           context: .
           file: ./Dockerfile
           #platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64
-          platforms: linux/amd64,linux/arm64,linux/arm/v6,linux/arm/v7
+          #platforms: linux/amd64,linux/arm64,linux/arm/v6,linux/arm/v7
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
