--- a/ui/package.json
+++ b/ui/package.json
@@ -36,6 +36,7 @@
     "@fortawesome/vue-fontawesome": "0.1.9",
     "axios": "0.19.2",
     "buefy": "^0.9.7",
+    "chart.js": "^2.9.4",
     "core-js": "3.6.4",
     "currency-formatter": "^1.5.7",
     "date-fns": "2.10.0",
@@ -43,6 +44,7 @@
     "normalize.css": "8.0.1",
     "nprogress": "0.2.0",
     "vue": "2.6.11",
+    "vue-chartjs": "^3.5.1",
     "vue-meta": "2.3.3",
     "vue-router": "3.1.6",
     "vuex": "3.1.2"
