--- a/.github/workflows/hub.yml
+++ b/.github/workflows/hub.yml
@@ -8,38 +8,36 @@ jobs:
   multi:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v2
-      -
-        name: Set up QEMU
+      - name: Set up QEMU
+        id: qemu
         uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
+        with:
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
+      - name: Available platforms
+        run: echo ${{ steps.qemu.outputs.platforms }
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      -
-        name: Set up build cache
+      - name: Set up build cache
         uses: actions/cache@v2
         with:
           path: /tmp/.buildx-cache
           key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-buildx-
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v1 
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Login to GitHub
+      - name: Login to GitHub
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.CR_PAT }}
-      -
-        name: Build and push
+      - name: Build and push
         uses: docker/build-push-action@v2
         with:
           context: .
