--- a/ui/package.json
+++ b/ui/package.json
@@ -34,13 +34,13 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/vue-fontawesome": "0.1.9",
-    "axios": "0.19.2",
+    "axios": "^0.27.0",
     "buefy": "^0.9.7",
     "chart.js": "^2.9.4",
     "core-js": "3.6.4",
     "currency-formatter": "^1.5.7",
     "date-fns": "2.10.0",
-    "lodash": "4.17.15",
+    "lodash": "^4.17.21",
     "normalize.css": "8.0.1",
     "nprogress": "0.2.0",
     "vue": "2.6.11",
@@ -70,7 +70,7 @@
     "hygen": "4.0.x",
     "imagemin-lint-staged": "0.4.x",
     "lint-staged": "10.0.x",
-    "markdownlint-cli": "0.22.x",
+    "markdownlint-cli": "^0.31.1",
     "npm-run-all": "4.1.x",
     "sass": "1.26.x",
     "sass-loader": "8.0.x",
