--- a/.github/workflows/hub.yml
+++ b/.github/workflows/hub.yml
@@ -46,8 +46,8 @@ jobs:
           #platforms: linux/amd64,linux/arm64,linux/arm/v6,linux/arm/v7
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
+          # cache-from: type=local,src=/tmp/.buildx-cache
+          # cache-to: type=local,dest=/tmp/.buildx-cache
           tags: |
             akhilrex/hammond:latest
             akhilrex/hammond:1.0.0
