--- a/ui/package.json
+++ b/ui/package.json
@@ -41,10 +41,12 @@
     "currency-formatter": "^1.5.7",
     "date-fns": "2.10.0",
     "lodash": "^4.17.21",
+    "node-gyp": "^9.3.1",
     "normalize.css": "8.0.1",
     "nprogress": "0.2.0",
     "vue": "2.6.11",
     "vue-chartjs": "^3.5.1",
+    "vue-i18n": "^8.28.2",
     "vue-meta": "2.3.3",
     "vue-router": "3.1.6",
     "vuex": "3.1.2"
