--- a/.github/workflows/hub.yml
+++ b/.github/workflows/hub.yml
@@ -33,7 +33,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          password: ${{ secrets.DOCKER_TOKEN }}
       - name: Login to GitHub
         uses: docker/login-action@v1
         with:
