--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2.1"
 services:
   hammond:
-    image: akhilrex/hammond
+    image: alfhou/hammond
     container_name: hammond
     environment:
       - JWT_SECRET=somethingverystrong
